Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -2,6 +2,7 @@
 
 == General ==
 
+  * Generate random city name
   * User interface to allow for customising the city
   * Target .net framework v2
   * Ruined mode
