--- a/wiki/Sewers.wiki
+++ b/wiki/Sewers.wiki
@@ -4,12 +4,14 @@
 
 The sewer is the large network of tunnels below the city.
 
+= Planned features =
+
 The main aims of the sewer are:
 
   * To provide a way for the player to obtain ores.
   * To provide a challenge for the player, within the city walls.
 
-= Planned features =
+Other planned features are:
 
   * Sporadic red light torches
   * Ores
