--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -1,3 +1,6 @@
 #summary I use this page to keep track of changes in between versions
 
- * (nothing yet)
+  * Water moats now have wooden drawbridges (lava ones continue to have stone bridges)
+  * Minor code improvements
+  * Added some more words to the city name generator
+  * The sewer layout now has loops and more tunnels on each level (it's still empty though)
