--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -4,3 +4,5 @@
   * Minor code improvements
   * Added some more words to the city name generator
   * The sewer layout now has loops and more tunnels on each level (it's still empty though)
+  * Plots are now different sizes
+  * Plots are no longer in a rigid grid layout. They look more natural now
