--- a/wiki/GuardTowers.wiki
+++ b/wiki/GuardTowers.wiki
@@ -7,4 +7,4 @@ This page refers to the four guard towers at the corners of the city walls.
 = Planned features =
 
   * Beds
-  * Archery slots
+  * ~~Archery slots~~
