Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -7,3 +7,4 @@
   * Plots are no longer in a rigid grid layout. They look more natural now
   * Plots will now be rotated randomly
   * Added archery slots to the guard towers
+  * Added noticeboard
