--- a/wiki/Farms.wiki
+++ b/wiki/Farms.wiki
@@ -8,4 +8,4 @@ This page refers to the farms outside the city walls. The farms provide a renewa
 
   * Mushroom farms
   * Orchards
-  * Cactus farms
+  * ~~Cactus farms~~
