Edited wiki page Plots through web user interface.

--- a/wiki/Plots.wiki
+++ b/wiki/Plots.wiki
@@ -18,6 +18,7 @@ The list of buildings is almost endless, but I'll be focussing on buildings that
 
 I will probably make some buildings that are purely for aesthetics:
 
+  * City square
   * Graveyard
   * Tavern
   * Park
