--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -1,3 +1,3 @@
 #summary I use this page to keep track of changes in between versions
 
-Nothing yet...
+* The interface is done. It allows for switching off sections (moat, guard towers, farms, etc) along with setting the moat liquid and city size.
