Edited wiki page Moat through web user interface.

--- a/wiki/Moat.wiki
+++ b/wiki/Moat.wiki
@@ -6,4 +6,5 @@ This page refers to the large moat that is outside of the city walls.
 
 = Planned features =
 
-  * Allow the user to choose between a water or lava moat.
+  * ~~Allow the user to choose between a water or lava moat.~~
+  * Cactus moat
