Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -9,10 +9,11 @@ For changes that are done, but not released yet, please see the UnreleasedChange
   * Set world time
   * Move city names to text files
   * Allow the user to specify a random seed for city generation
+  * Make a random class to hold all the random methods
 
 == Chunks ==
 
-  * Use Copy Chunk in next version of Substrate
+  * Use Copy Chunk
 
 == Sections ==
 
