Edited wiki page Plots through web user interface.

--- a/wiki/Plots.wiki
+++ b/wiki/Plots.wiki
@@ -22,6 +22,7 @@ I will probably make some buildings that are purely for aesthetics:
   * Graveyard
   * Tavern
   * Park
+  * City hall
   * Fountain
   * Brothel
 
