--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -7,9 +7,9 @@ For changes that are done, but not released yet, please see the UnreleasedChange
   * User interface to allow for customising the city
   * Rail system
   * Set world time
-  * Move city names to text files (in progress)
+  * ~~Move city names to text files~~
   * Allow the user to specify a random seed for city generation
-  * Make a random class to hold all the random methods (in progress)
+  * ~~Make a random class to hold all the random methods~~
 
 == Chunks ==
 
