--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -9,6 +9,7 @@ For changes that are done, but not released yet, please see the UnreleasedChange
   * Set world time
   * ~~Move city names to text files~~
   * Allow the user to specify a random seed for city generation
+  * Figure out why everything breaks at 24+ plots
   * ~~Make a random class to hold all the random methods~~
 
 == Chunks ==
