--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -10,6 +10,7 @@ For changes that are done, but not released yet, please see the UnreleasedChange
   * ~~Move city names to text files~~
   * Allow the user to specify a random seed for city generation
   * Figure out why everything breaks at 24+ plots
+  * Option to include/exclude chests
   * ~~Make a random class to hold all the random methods~~
 
 == Chunks ==
