Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -11,6 +11,7 @@ For changes that are done, but not released yet, please see the UnreleasedChange
   * Allow the user to specify a random seed for city generation
   * Figure out why everything breaks at 24+ plots
   * Option to include/exclude chests
+  * Allow for including/excluding paths and buildings separately
   * ~~Make a random class to hold all the random methods~~
 
 == Chunks ==
