Edited wiki page Plots through web user interface.

--- a/wiki/Plots.wiki
+++ b/wiki/Plots.wiki
@@ -32,5 +32,6 @@ Some buildings aren't needed:
 
 Other possible ideas for the future are:
 
+  * Streets
   * Splitting the city into districts
   * Street lanterns
