--- a/wiki/Walls.wiki
+++ b/wiki/Walls.wiki
@@ -13,3 +13,4 @@ The walls referred to here are the large city walls that go all around the city.
     * Sword
     * Shield
   * Torches
+  * Overhang to thwart spiders
