--- a/wiki/Walls.wiki
+++ b/wiki/Walls.wiki
@@ -7,10 +7,7 @@ The walls referred to here are the large city walls that go all around the city.
 = Planned features =
 
   * Archery slots
-  * Decorations at the gates (aka city emblems)
-    * Cross
-    * England flag
-    * Sword
-    * Shield
   * Torches
   * Overhang to thwart spiders
+  * More city emblems
+  * Make city emblems selectable + optional
