Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -5,3 +5,4 @@
   * Some farms will now have hedges instead of fences
   * Maximum size of a farm has been increased from 14 to 24 blocks
   * Added several million squiggly brackets to the code
+  * Added three city emblems
