Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -1,8 +1,10 @@
 #summary I use this page to keep track of changes in between versions
 
   * Water moat is now one block higher, so the player and mobs can get out easier.
-  * Fences now appear about 50% of the time on sugarcane farms
-  * Some farms will now have hedges instead of fences
-  * Maximum size of a farm has been increased from 14 to 24 blocks
-  * Added several million squiggly brackets to the code
   * Added three city emblems
+  * Added several million squiggly brackets to the code
+  * Thanks to Curufea for these suggestions:
+    * Fences now appear about 50% of the time on sugarcane farms
+    * Some farms will now have hedges instead of fences
+    * Maximum size of a farm has been increased from 14 to 24 blocks
+    * New moat option: drop to bedrock
