--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -4,6 +4,8 @@
   * Added three city emblems
   * Added cactus moats
   * Added several million squiggly brackets to the code
+  * The range of city names is now massively increased, thanks to SoNick
+  * Right-clicking the city picture on the main screen will show fifty random city names
   * Thanks to Curufea for these suggestions:
     * Fences now appear about 50% of the time on sugarcane farms
     * Some farms will now have hedges instead of fences
