--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -1,9 +1,10 @@
 #summary I use this page to keep track of changes in between versions
 
-  * Water moat is now one block higher, so the player and mobs can get out easily
   * Added three city emblems
   * Added cactus moats
+  * Added a new room to the bottom half of the guard towers, with beds
   * Added several million squiggly brackets to the code
+  * Water moat is now one block higher, so the player and mobs can get out easily
   * The range of city names is now massively increased, thanks to !SoNick
   * Right-clicking the city picture on the main screen will show fifty random city names
   * Thanks to Curufea for these suggestions:
