Edited wiki page GuardTowers through web user interface.

--- a/wiki/GuardTowers.wiki
+++ b/wiki/GuardTowers.wiki
@@ -6,4 +6,4 @@ This page refers to the four guard towers at the corners of the city walls.
 
 = Planned features =
 
-  * Beds
+  * Doors from the guard towers to the city
