--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -7,6 +7,7 @@ These changes are done and will be in V1.3:
   * Added a new room to the bottom half of the guard towers, with beds
   * Added several million squiggly brackets to the code
   * Water moat is now one block higher, so the player and mobs can get out easily
+  * Crenels now have a new design. Thanks to Golgrinn for the design and suggestion.
   * The range of city names is now massively increased, thanks to !SoNick
   * Right-clicking the city picture on the main screen will show fifty random city names
   * Thanks to Curufea for these suggestions:
