--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -8,6 +8,7 @@ These changes are done and will be in V1.3:
   * Added several million squiggly brackets to the code
   * Water moat is now one block higher, so the player and mobs can get out easily
   * Crenels now have a new design. Thanks to Golgrinn for the design and suggestion.
+  * Fixed the city saplings being unstackable with regular saplings. Thanks to Golgrinn for the bug report.
   * The range of city names is now massively increased, thanks to !SoNick
   * Right-clicking the city picture on the main screen will show fifty random city names
   * Thanks to Curufea for these suggestions:
