--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -10,6 +10,7 @@ These changes are done and will be in V1.3:
   * Crenels now have a new design. Thanks to Golgrinn for the design and suggestion.
   * Fixed the city saplings being unstackable with regular saplings. Thanks to Golgrinn for the bug report.
   * The range of city names is now massively increased, thanks to !SoNick
+  * It's now possible to have paths without buildings, or vice-versa, if you like.
   * Right-clicking the city picture on the main screen will show fifty random city names
   * Thanks to Curufea for these suggestions:
     * Fences now appear about 50% of the time on sugarcane farms
