Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -7,15 +7,20 @@ For changes that are done, but not released yet, please see the UnreleasedChange
   * Allow the user to specify a random seed for city generation
   * Figure out why everything breaks at 24+ plots
   * Option to include/exclude chests
-  * Possible to make a nicer connection between the city terrain and the natural terrain?
-  * Allow for including/excluding paths and buildings separately
   * Use Copy Chunk
   * Credits page
-  * Possible to set biomes?
-  * Possible to set the world edited time of the files? (so it appears at the top of the list)
   * Rail system
   * Door helper functions
   * Rotation should work with doors, signs, chests, etc
+
+== Possible Features ==
+
+These things might be too ambitious or just not possible.
+
+  * Multiple cities
+  * Possible to make a nicer connection between the city terrain and the natural terrain?
+  * Possible to set the world edited time of the files? (so it appears at the top of the list)
+  * Maybe a way to set/generate the terrain near the city
 
 == Sections ==
 
