Edited wiki page Farms through web user interface.

--- a/wiki/Farms.wiki
+++ b/wiki/Farms.wiki
@@ -8,6 +8,7 @@ This page refers to the farms outside the city walls. The farms provide a renewa
 
   * Mushroom farms
   * Orchards
+  * Ponds
   * Barns and farm houses
   * Farms orientated the other way
   * Putting the door on a random side
