Edited wiki page Walls through web user interface.

--- a/wiki/Walls.wiki
+++ b/wiki/Walls.wiki
@@ -8,3 +8,4 @@ The walls referred to here are the large city walls that go all around the city.
 
   * More city emblems
   * Make city emblems selectable + optional
+  * Allow the user to choose the light source type
