--- a/wiki/GuardTowers.wiki
+++ b/wiki/GuardTowers.wiki
@@ -8,3 +8,4 @@ This page refers to the four guard towers at the corners of the city walls.
 
   * Doors from the guard towers to the city
   * Different designs
+  * Beacons
