Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -13,6 +13,7 @@ These changes are done and will be in V1.3:
   * It's now possible to have paths without buildings, or vice-versa, if you like
   * Added light sources to the inside/outside/top of the walls and guard towers
   * Initial time is now random
+  * City saplings are now a random type.
   * Right-clicking the city picture on the main screen will show fifty random city names
   * Thanks to Curufea for these suggestions:
     * Fences now appear about 50% of the time on sugarcane farms
