Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -14,6 +14,7 @@ These changes are done and will be in V1.3:
   * Added light sources to the inside/outside/top of the walls and guard towers
   * Initial time is now random
   * City saplings are now a random type.
+  * Added fire beacons above the guard towers
   * Right-clicking the city picture on the main screen will show fifty random city names
   * Thanks to Curufea for these suggestions:
     * Fences now appear about 50% of the time on sugarcane farms
