--- a/wiki/Drawbridges.wiki
+++ b/wiki/Drawbridges.wiki
@@ -6,4 +6,4 @@ This page refers to the four drawbridges that allow entrance/exit to the city.
 
 = Planned features =
 
- * Try adding ropes, to see how they look
+ * Nothing yet...
