--- a/wiki/Drawbridges.wiki
+++ b/wiki/Drawbridges.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-This page refers to the four drawbridges that allow entrance/exit to the city.
+This page refers to the four drawbridges that allow entrance to the city. It also covers the murder holes and the entrance.
 
 = Planned features =
 
