Edited wiki page Farms through web user interface.

--- a/wiki/Farms.wiki
+++ b/wiki/Farms.wiki
@@ -8,5 +8,6 @@ This page refers to the farms outside the city walls. The farms provide a renewa
 
   * Mushroom farms
   * Barns and farm houses
+  * Add a glass roof to the crop farms, to stop spiders climbing in
   * Farms orientated the other way
   * Putting the door on a random side
