--- a/wiki/Buildings.wiki
+++ b/wiki/Buildings.wiki
@@ -4,33 +4,29 @@
 
 This refers to the buildings within the city.
 
-= Planned features =
+= Planned features for buildings =
 
-I'm planning to make lots of buildings manually in !MineCraft, then export them to files. The city generator will then select random files to make the city.
+Mace will include a !MineCraft world, which contains lots of different buildings. These buildings will then be extracted from the world and placed within the generated city, with various elements modified to create more variety.
 
-The list of buildings is almost endless, but I'll be focussing on buildings that have a purpose, such as:
+Some buildings are done already. Here are some more buildings that I would like to add:
 
-  * House (sleeping)
-  * Warehouse (storage)
-  * Blacksmith (crafting)
-  * Bakery (food)
-  * King's vegetable farm (renewable food)
-
-I will probably make some buildings that are purely for aesthetics:
-
-  * City square
-  * Graveyard
-  * Tavern
+  * More types of houses
+  * Warehouse
+  * Bakery
+  * King's vegetables
   * Park
-  * City hall
   * Fountain
   * Brothel
+  * City square
+  * City hall
+  * Tavern
 
-Some buildings aren't needed:
+Some buildings need random elements, which are:
 
-  * Guard barracks (the guard towers handle this)
+  * Gravestone sign maker
+  * Statue placard maker
 
-Other possible ideas for the future are:
+= Other planned features =
 
   * Streets
   * Splitting the city into districts
