--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -2,4 +2,6 @@
 
 The main focus of V1.4.0 will be the city buildings and their layout. Changes done so far:
 
+ * The city is now randomly divided into rectangles by paths
+ * Random buildings are imported into the city
  * Made a few simple buildings: several houses, crafting hut, graveyard, warehouse, statue, tavern, fountain, trees, greenhouse, bakery
