Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -11,6 +11,7 @@ For changes that are done, but not released yet, please see the UnreleasedChange
   * Rail system
   * Rotation should work with doors, signs, chests, etc
   * Allow for putting the city in an existing world
+  * Better alignment wih chunk ranges
 
 == Possible Features ==
 
