--- a/wiki/Farms.wiki
+++ b/wiki/Farms.wiki
@@ -12,4 +12,4 @@ This page refers to the farms outside the city walls. The farms provide a renewa
   * Farms orientated the other way
   * Putting the door on a random side
   * Random flowers inbetween farms
-  * Slight variation in elevation
+  * Slight variations in elevations inbetween farms
