--- a/wiki/NoticeBoard.wiki
+++ b/wiki/NoticeBoard.wiki
@@ -8,3 +8,4 @@ The noticeboard is the signs located near the spawn point, with various messages
 
   * More messages
   * Allow for the noticeboard without the wall
+  * Messages should reference buildings within the city
