--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -5,7 +5,7 @@ The main focus of V1.4.0 will be the city buildings and their layout. Changes do
  * The city is now randomly divided into rectangles by paths
  * Random buildings are imported into the city
  * Made a few simple buildings: several houses, crafting hut, graveyard, warehouse, statue, tavern, fountain, trees, greenhouse, bakery
- * Added main roads going through the city, which link the north/south entrance and then east/west entrance
+ * Added main roads going through the city, which link the north/south entrance and the east/west entrance
  * Removed the sewer. I want to focus development time on the city
  * City size now aligns with chunk size, to make the edges a little better
  * Flowers and grass will now randomly appear amongst the farms
