--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -9,3 +9,4 @@ The main focus of V1.4.0 will be the city buildings and their layout. Changes do
  * Removed the sewer. I want to focus development time on the city
  * City size now aligns with chunk size, to make the edges a little better
  * Flowers and grass will now randomly appear amongst the farms
+ * Outside light sources will now be fires or torches. This can be specified before generating
